hphp/hack/test/typecheck/lambda/lambda_bad_predicate.php.exp
File "lambda_bad_predicate.php", line 40, characters 27-30:
No method `hell` in `MyClass` (Typing[4053])
  File "lambda_bad_predicate.php", line 27, characters 19-23:
  Did you mean `hello` instead?
  File "lambda_bad_predicate.php", line 32, characters 45-51:
  This is why I think it is an object of type MyClass
  File "lambda_bad_predicate.php", line 32, characters 45-51:
  This type argument to `IPredicate` only allows supertypes (it is contravariant)
  File "lambda_bad_predicate.php", line 26, characters 7-13:
  Declaration of `MyClass` is here
